--- a/instance/static/html/instance/index.html
+++ b/instance/static/html/instance/index.html
@@ -27,10 +27,12 @@
     <ul class="side-nav" ng-if="instanceList">
       <li ng-repeat="instance in instanceList"
           ng-class="{active: instance == selected.instance}">
-        <div class="status-icon" ng-switch="instance.progress">
-          <i class="fa fa-ellipsis-h" tooltip-placement="top" tooltip="In progress" ng-switch-when="running"></i>
-          <i class="fa fa-times" tooltip-placement="top" tooltip="Failed" ng-switch-when="failed"></i>
-          <i class="fa fa-check" tooltip-placement="top" tooltip="Success" ng-switch-when="success"></i>
+        <div class="status-icon" ng-switch="instance.status">
+          <i class="fa fa-ellipsis-h" tooltip-placement="top" tooltip="Waiting for server" ng-switch-when="waiting"></i>
+          <i class="fa fa-ellipsis-h" tooltip-placement="top" tooltip="Configuring server" ng-switch-when="configuring"></i>
+          <i class="fa fa-times" tooltip-placement="top" tooltip="Error" ng-switch-when="error"></i>
+          <i class="fa fa-times" tooltip-placement="top" tooltip="Configuration Failed" ng-switch-when="failed"></i>
+          <i class="fa fa-check" tooltip-placement="top" tooltip="Running" ng-switch-when="running"></i>
         </div>
         <a ng-click="select(instance)">{{ instance.name }}</a>
       </li>
@@ -49,9 +51,10 @@
                 title="{{ server.status_description }}">
             {{ server.status_name }}
           </span>
-          <span ng-switch="selected.instance.progress">
-            <i class="fa fa-times" tooltip-placement="top" tooltip="Failed" ng-switch-when="failed"></i>
-            <i class="fa fa-check" tooltip-placement="top" tooltip="Success" ng-switch-when="success"></i>
+          <span ng-switch="selected.instance.status">
+            <i class="fa fa-times" tooltip-placement="top" tooltip="Error" ng-switch-when="error"></i>
+            <i class="fa fa-times" tooltip-placement="top" tooltip="Configuration Failed" ng-switch-when="failed"></i>
+            <i class="fa fa-check" tooltip-placement="top" tooltip="Running" ng-switch-when="running"></i>
           </span>
         </span>
       </h3>
@@ -73,12 +76,20 @@
             </ul>
           </div>
           <div class="large-2 columns">
-            <div class="status-icon" ng-if="selected.instance.progress != 'running'">
+            <div class="status-icon" ng-if="selected.instance.status == 'failed'">
               <button class="button reprovision" ng-click="provision(selected.instance)">
                 Provision
               </button>
             </div>
-            <div class="status-icon" ng-if="selected.instance.progress == 'running'">
+            <div class="status-icon" ng-if="selected.instance.status == 'running'">
+              <button class="button reprovision" ng-click="provision(selected.instance)">
+                Provision
+              </button>
+            </div>
+            <div class="status-icon" ng-if="selected.instance.status == 'waiting'">
+              <img src="/static/img/running.png" tooltip-placement="bottom" tooltip="Waiting for server..." alt="Waiting for server..."/>
+            </div>
+            <div class="status-icon" ng-if="selected.instance.status == 'configuring'">
               <img src="/static/img/running.png" tooltip-placement="bottom" tooltip="Provisioning in progress..." alt="Provisioning in progress..."/>
             </div>
           </div>
@@ -88,7 +99,7 @@
     <div class="row">
       <tabset>
         <tab heading="Log">
-          <pre ng-if="selected.instance.status_progress == 'failed'" class="error-log" ng-repeat="line in select.instance.log_error_entries track by $index">{{ line.created | date:'yyyy-MM-dd HH:mm:ssZ' }} | {{ line.level }} | {{ line.text }}</pre><br/>
+          <pre ng-if="selected.instance.status == 'failed'" class="error-log" ng-repeat="line in select.instance.log_error_entries track by $index">{{ line.created | date:'yyyy-MM-dd HH:mm:ssZ' }} | {{ line.level }} | {{ line.text }}</pre><br/>
           <pre class="instance-log" ng-repeat="line in selected.instance.log_entries track by $index">{{ line.created | date:'yyyy-MM-dd HH:mm:ssZ' }} | {{ line.level }} | {{ line.text }}</pre>
         </tab>
         <tab heading="Configuration">
